@@ -15,6 +15,7 @@
         "electricboiler >= 1.1.0",
         "Flat-Solar >= 0.1.21",
         "Flow Control >= 3.1.4",
+        "fluid_permutations_fixed >= 0.5.4",
         "PlutoniumEnergy >= 1.6.2",
         "SpaceMod >= 1.1.3",
         "Superheating >= 1.0.3",
